--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,18 @@
+sudo: false
+
 language: ruby
+
 rvm:
-  - 1.9.3
-  - 2.0.0
-  - 2.1.0
-  - 2.1.1
-  - 2.1.2
+  - 2.2.5
+  - 2.3.1
+
+gemfile:
+  - gemfiles/rails40
+  - gemfiles/rails41
+  - gemfiles/rails42
+  - gemfiles/rails50
+
+script: bundle exec rake spec
+
+before_install:
+  - gem install bundler -v '~> 1.12'
