--- a/.travis.yml
+++ b/.travis.yml
@@ -3,20 +3,24 @@ sudo: false
 language: ruby
 
 rvm:
-  - 2.4.7
-  - 2.5.6
-  - 2.6.4
+  - 2.4.10
+  - 2.5.8
+  - 2.6.6
+  - 2.7.2
 
 gemfile:
   - gemfiles/rails50
   - gemfiles/rails51
   - gemfiles/rails52
   - gemfiles/rails60
+  - gemfiles/rails61
 
 matrix:
   exclude:
-    - rvm: 2.4.7
+    - rvm: 2.4.10
       gemfile: gemfiles/rails60
+    - rvm: 2.4.10
+      gemfile: gemfiles/rails61
 
 script: bundle exec rake spec
 
