--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,21 @@ sudo: false
 language: ruby
 
 rvm:
-  - 2.5.8
-  - 2.6.6
-  - 2.7.2
-  - 3.0.0
+  - 2.6.9
+  - 2.7.5
+  - 3.0.3
 
 gemfile:
   - gemfiles/rails52
   - gemfiles/rails60
   - gemfiles/rails61
+  - gemfiles/rails70
 
 matrix:
   exclude:
-    - rvm: 2.5.8
-      gemfile: gemfiles/rails61
-    - rvm: 2.7.2
-      gemfile: gemfiles/rails52
-    - rvm: 3.0.0
+    - rvm: 2.6.9
+      gemfile: gemfiles/rails70
+    - rvm: 3.0.3
       gemfile: gemfiles/rails52
 
 script: bundle exec rake spec
