--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,11 +4,11 @@ require:
 AllCops:
   TargetRubyVersion: 2.6
 
-Layout/AlignHash:
+Layout/HashAlignment:
   EnforcedHashRocketStyle: table
   EnforcedColonStyle: table
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 120
 
 Metrics/AbcSize:
