--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,17 +7,16 @@ jobs:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}
     strategy:
       matrix:
-        ruby: [2.6, 2.7, 3.0]
+        ruby: [2.7, 3.0, 3.1, 3.2]
         gemfile:
-          - rails52
-          - rails60
           - rails61
           - rails70
+          - rails71
         exclude:
-          - ruby: 2.6
-            gemfile: rails70
-          - ruby: 3.0
-            gemfile: rails52
+          - ruby: 3.2
+            gemfile:
+              - rails61
+
 
     steps:
       - uses: actions/checkout@v2
