--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,16 +7,18 @@ jobs:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}
     strategy:
       matrix:
-        ruby: [2.7, 3.0, 3.1, 3.2]
+        ruby: [3.1, 3.2, 3.3, 3.4]
         gemfile:
-          - rails61
-          - rails70
           - rails71
+          - rails72
+          - rails80
         exclude:
+          - ruby: 3.1
+            gemfile:
+              - rails80
           - ruby: 3.2
             gemfile:
-              - rails61
-
+              - rails80
 
     steps:
       - uses: actions/checkout@v4
