--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,16 +7,16 @@ jobs:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}
     strategy:
       matrix:
-        ruby: [3.1, 3.2, 3.3, 3.4]
+        ruby: [3.2, 3.3, 3.4]
         gemfile:
-          - rails71
           - rails72
           - rails80
+          - rails81
         exclude:
-          - ruby: 3.1
-            gemfile: rails80
           - ruby: 3.2
             gemfile: rails80
+          - ruby: 3.2
+            gemfile: rails81
 
     steps:
       - uses: actions/checkout@v4
